--- a/Destroyed Platform/Assembly-CSharp-Editor.csproj
+++ b/Destroyed Platform/Assembly-CSharp-Editor.csproj
@@ -156,6 +156,8 @@
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
       <Project>{68782A53-0B15-D82D-BBE4-FC8EE306C56D}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-CSharp.csproj">
+      <Project>{93495E82-E0E7-8764-8A88-DBFBAD1D4FC3}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-CSharp-Editor-firstpass.csproj">
       <Project>{7BA2FAA5-734A-B7DD-27D2-3D7093F69964}</Project>      <Name>Assembly-CSharp-Editor-firstpass</Name>    </ProjectReference>
   </ItemGroup>
